--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "description": "Ackee stats in your macOS menu bar",
   "main": "index.js",
   "scripts": {
-    "lint": "eslint 'index.js'"
+    "test": "npm run lint",
+    "lint": "eslint \"index.js\""
   },
   "license": "MIT",
   "homepage": "https://github.com/electerious/ackee-bitbar",
@@ -17,17 +18,18 @@
     "url": "https://github.com/electerious/ackee-bitbar.git"
   },
   "dependencies": {
-    "bitbar": "^1.3.1",
-    "dotenv": "^8.2.0",
-    "node-fetch": "^2.6.0"
+    "bitbar": "^1.3.2",
+    "dotenv": "^10.0.0",
+    "node-fetch": "^2.6.1"
   },
   "devDependencies": {
-    "@electerious/eslint-config": "^1.3.4",
-    "eslint": "^7.7.0",
-    "eslint-plugin-import": "^2.22.0",
-    "eslint-plugin-react": "^7.20.6",
-    "eslint-plugin-react-hooks": "^4.0.8",
-    "eslint-plugin-react-native": "^3.8.1"
+    "@electerious/eslint-config": "^2.0.2",
+    "eslint": "^7.29.0",
+    "eslint-plugin-ava": "^12.0.0",
+    "eslint-plugin-import": "^2.23.4",
+    "eslint-plugin-react": "^7.24.0",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "eslint-plugin-unicorn": "^33.0.1"
   },
   "eslintConfig": {
     "root": true,
